--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Newone</title>
 </head>
 <body>
-    <p>Parrafo new actualizacion commit</p>
+    <p>Parrafo new nuevo commit</p>
 </body>
 </html>
